--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native-stack": "^7.3.26",
     "expo": "^54.0.2",
     "expo-status-bar": "~3.0.8",
     "nativewind": "latest",
